--- a/docs/ReleaseNotes/1.8.99.2.md
+++ b/docs/ReleaseNotes/1.8.99.2.md
@@ -14,7 +14,7 @@ updated: 28 Dec 2022 -->
 [![KSP version][KSP:shd:stat]][KSP:url] [![License][LIC:shd]][LIC:url]  
 ![AVC .version files][AVCVAL:shd] [![Pages][MOD:pages:shd]][MOD:pages]
 
-## Version 1.8.99.2-prerelease - `<Rust Koleum: 2nd coat` edition
+## Version 1.8.99.2-prerelease - `<Rust Koleum: 2nd coat>` edition
 
 * Released
   * 15 Jan 2023
