--- a/docs/ReleaseNotes/1.8.99.3.md
+++ b/docs/ReleaseNotes/1.8.99.3.md
@@ -21,14 +21,47 @@ updated: 17 Mar 2023 -->
 ## Version 1.8.99.3-prerelease - `<Rust Koleum: 3rd coat>` edition
 
 * Released
-  * 17 Mar 2023
+  * 18 Mar 2023
   * for Kerbal Space Program 1.12.5
   * by [zer0Kerbal](https://github.com/zer0Kerbal)
 
 <div style="border:0.5px solid Tomato; background-color: #bada55; color: #FF0000; text-align:center"><h4>
 <b>For best results - DO A CLEAN INSTALL; DELETE EXISTING INSTALLATION THEN RE-INSTALL</b></h4><p>Download from <a href="https://www.curseforge.com/kerbal/ksp-mods/RustyStarRockets/files">CurseForge</a></p></div>
 
-## Summary
+## Summary* Next of several staged updates
+* Hard dependency is Rusty Star Shipyards (RSS)
+  * provides agent, flags, and other common files
+
+* 22 more parts upgraded in this release
+* 3 new parts added in this release
+* 62 total parts initially upgraded (+3 new)
+* ~127 yet to upgrade
+* New: three (3) parts added
+  * Small Rusty Klaw
+  * Small Bulb
+  * Mini AIRBRAKE
+* Only parts that have been updated are included
+  * 15 Command
+  * 2 Aero (1 New)
+  * 2 Cargobays
+  * 2 CompoundParts
+  * 3 Chutes
+  * 3 Control
+  * 3 Coupling
+  * 3 Misc
+  * 4 Antenna
+  * 4 Electrical
+  * 4 Utility  (1 New)
+  * 5 Science
+  * 6 Thermal
+  * 9 Lights (1 New)e
+* Updated GhostParts.cfg v2.0.1.0
+* Added
+  * StackInlineLights.cfg v1.0.0.0
+  * RealismOverhaul.cfg v1.0.0.0 (only airbrakes)
+  * CommunityCategoryKit v1.0.0.0 (cck-lights)
+* for more details, read the release notes for 1.8.99.0
+* just doing more of the same
 
 ## See More
 
