--- a/docs/ReleaseNotes/1.1.1.0.md
+++ b/docs/ReleaseNotes/1.1.1.0.md
@@ -76,7 +76,7 @@ updated: 23 Jul 2022 -->
 <!-- mod -->
 [MOD:shd:stat]: https://img.shields.io/badge/Rusty%20Star%20Rockets%20(RSR)%20-v1.1.0.0--release-BADA55.svg?style=plastic&labelColor=darkgreen/ "1.1.1.0-release"
 
-[CRSFG:url]: https://www.curseforge.com/kerbal/ksp-mods/RustyStarRockets/files/ "Curseforge"
+[CURSFG:url]: https://www.curseforge.com/kerbal/ksp-mods/RustyStarRockets/files/ "Curseforge"
 [GITHUB:url]: https://github.com/zer0Kerbal/RustyStarRockets/ "GitHub"
 
 [KSP:url]: http://kerbalspaceprogram.com/ "Kerbal Space Program"
@@ -92,7 +92,7 @@ updated: 23 Jul 2022 -->
 [PAYPAL:img]: https://img.shields.io/badge/Buy%20me%20some%20-LFO-BADA55?style=for-the-badge&logo=paypal&labelColor=FFDD00 "PayPal"
 [PAYPAL:url]: https://www.paypal.com/donate?hosted_button_id=DC22YHMEJREKL "PayPal"
 [PATREON:img]: https://img.shields.io/badge/Patreon%20-Patreonize-FF424D?style=for-the-badge&logo=patreon "Patreon"
-[PATREON:url]: https://www.patreon.com/bePatron?u=23390503 "Patreon"
+[PATREON:url]: https://www.patreon.com/zer0Kerbal/membership "Patreon"
 [GSPONS:img]: https://img.shields.io/badge/Github%20-Sponsor-EA4AAA?style=for-the-badge&logo=githubsponsors "Github Sponsors"
 [GSPONS:url]: https://github.com/sponsors/zer0Kerbal "Github Sponsors"
 [BMCC:img]: https://img.shields.io/badge/Buy%20Me%20a%20-Snack!-FFDD00?style=for-the-badge&logo=buymeacoffee "Buy Me A Snack"
@@ -119,4 +119,4 @@ updated: 23 Jul 2022 -->
 
 [zer0Kerbal]: https://forum.kerbalspaceprogram.com/index.php?/profile/190933-*/ "zer0Kerbal"
 
-<!-- This File: CC BY-ND 4.0 by zer0Kerbal -->
+<!-- THIS FILE: CC BY-ND 4.0 by zer0Kerbal -->
